--- a/apps/bud/src/app/app.component.html
+++ b/apps/bud/src/app/app.component.html
@@ -1,1 +1,14 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<img
+    ngSrc="https://bud.co.uk/hs-fs/hubfs/bud-logo.webp?width=238&height=110&name=bud-logo.webp"
+    alt="{{ title }}"
+    width="238"
+    height="110"
+    priority
+/>
+
+<div class="title--bud">
+    <h1>Welcome to Bud</h1>
+    <h2>Apprenticeship Management Software - Training & Delivery</h2>
+</div>
+
+<router-outlet></router-outlet>
