--- a/apps/bud/src/app/app.component.html
+++ b/apps/bud/src/app/app.component.html
@@ -12,3 +12,12 @@
 </div>
 
 <router-outlet></router-outlet>
+
+<bud-ui-button
+    label="Show Users Information List"
+    type="primary">
+</bud-ui-button>
+<bud-ui-button
+    label="Show Users Information List"
+    type="primary">
+</bud-ui-button>
