update domain lib

--- a/libs/shared/ui/src/lib/components/button/button.component.scss
+++ b/libs/shared/ui/src/lib/components/button/button.component.scss
@@ -7,14 +7,14 @@
     align-items: center;
 
     &.primary {
-        background-color: #4b4b4b;
+        background-color: #003366;
         color: #fff;
         border: none;
     }
 
     &.secondary {
-        background-color: #fcffbe;
-        color: #060606;
+        background-color: #FF9800;
+        color: #ffffff;
         border: none;
     }
 
