--- a/apps/bud/src/app/app.component.html
+++ b/apps/bud/src/app/app.component.html
@@ -1,23 +1,46 @@
-<img
-    ngSrc="https://bud.co.uk/hs-fs/hubfs/bud-logo.webp?width=238&height=110&name=bud-logo.webp"
-    alt="{{ title }}"
-    width="238"
-    height="110"
-    priority
-/>
-
-<div class="title--bud">
-    <h1>Welcome to Bud</h1>
-    <h2>Apprenticeship Management Software - Training & Delivery</h2>
+<!-- Logo Section -->
+<div class="header">
+    <img
+        ngSrc="https://bud.co.uk/hs-fs/hubfs/bud-logo.webp?width=238&height=110&name=bud-logo.webp"
+        alt="Bud Logo"
+        class="logo"
+        width="238"
+        height="110"
+        priority
+    />
 </div>
 
+<!-- Title and Description Section -->
+<div class="title-container">
+    <h1 class="main-title">Welcome to Bud</h1>
+    <h2 class="sub-title">Apprenticeship Management Software - Training & Delivery</h2>
+    <p class="description">
+        This is a demonstration of creating a basic Angular application featuring a dynamic form. The form includes fields for
+        <strong>Name</strong>, <strong>Email</strong>, and a dynamic list of <strong>Phone Numbers</strong>. It supports real-time
+        validation, saves data to the global state using NgRx, and showcases state management techniques.
+    </p>
+</div>
+
+<!-- Router Outlet -->
 <router-outlet></router-outlet>
 
-<bud-ui-button
-    label="Show Users Information List"
-    type="primary">
-</bud-ui-button>
-<bud-ui-button
-    label="Show Users Information List"
-    type="primary">
-</bud-ui-button>
+<!-- User Cards Section -->
+<div class="users-container" *ngIf="selectUrl$ | async as hiddenURL">
+    <bud-ui-card
+        [title]="'User Form: NgRx State Management'"
+        [content]="'Explore profile features with NgRx state management.'"
+        [imageUrl]="'assets/images/ngrx.jpeg'"
+        [actions]="['Explore NgRx']"
+        (actionClick)="openLazyModule('ngrx')"
+    >
+    </bud-ui-card>
+
+    <bud-ui-card
+        [title]="'User Form: Signals State Management'"
+        [content]="'Learn about managing profiles using Angular Signals.'"
+        [imageUrl]="'assets/images/signal.jpg'"
+        [actions]="['Explore Signals']"
+        (actionClick)="openLazyModule('signal')"
+    >
+    </bud-ui-card>
+</div>
