--- a/apps/bud/src/style/base/_base.scss
+++ b/apps/bud/src/style/base/_base.scss
@@ -1,7 +1,5 @@
 body {
-    min-height: 100vh; // Minimum height to ensure scrollbar appears
+    min-height: 100vh;
     padding-right: 0 !important;
-
     letter-spacing: normal;
-
 }
