--- a/apps/bud/src/style/base/_typography.scss
+++ b/apps/bud/src/style/base/_typography.scss
@@ -1,7 +1,4 @@
-/**
- * Basic typography style for copy text
- */
-
+_
 body {
     @extend .ibm-plex-serif-regular;
     font-size: 1rem;
@@ -10,4 +7,8 @@ body {
 h1,
 h2 {
     @extend .ibm-plex-serif-semibold;
+}
+
+p{
+    @extend .ibm-plex-serif-regular;
 }
