--- a/libs/shared/ui/src/lib/components/button/button.component.html
+++ b/libs/shared/ui/src/lib/components/button/button.component.html
@@ -1,6 +1,3 @@
-<button [ngClass]="type" [disabled]="disabled" (click)="onClick()" class="btn">
-    <ng-container *ngIf="icon">
-        <i class="material-icons">{{ icon }}</i>
-    </ng-container>
+<button [disabled]="disabled" (click)="onClick()" [ngClass]="['btn', type, buttonSize]">
     {{ label }}
 </button>
